--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,4 +1,4 @@
-<div class="default-bg-color">
+<div class="font default-bg-color">
    <section class="padding-body ra-responsive-layout r-mt-70">
       <div class="swiper-wrapper-center">
          <!-- main carousel -->
@@ -19,7 +19,7 @@
    <div class="w-100 d-flex justify-content-center">
       <section class="cards-section w-75">
          <div class="cards-header">
-            <h2 class="text-white">Event</h2>
+            <h2 class="text-white fw-bold">All Event</h2>
          </div>
          <div class="cards-grid">
             @for (s of getGridSlides(); track $index; let i = $index) {
