--- a/src/app/login/sign-in-page-user/user-login-page.html
+++ b/src/app/login/sign-in-page-user/user-login-page.html
@@ -48,12 +48,12 @@
 
                <div class="form-check custom-checkbox" style="margin-bottom: 2rem;">
                   <input 
-                     class="form-check-input me-2" 
+                     class="form-check-input p-0 me-2" 
                      type="checkbox" 
                      id="remember"
                      [(ngModel)]="rememberMe"
                      name="rememberMe"
-                     [disabled]="isLoading" />
+                     [disabled]="isLoading"/>
                   <label class="form-check-label text-white m-auto fw-light fst-italic" for="remember">Remember
                      me</label>
                </div>
