--- a/src/app/ticket-page/ticket-buy/ticket-buy.html
+++ b/src/app/ticket-page/ticket-buy/ticket-buy.html
@@ -1,4 +1,4 @@
-<div class="default-bg-color">
+<div class="default-bg-color font">
    @if (!isAuthenticated) {
    <section class="ticket-page container-fluid px-4 py-4">
       <div class="auth-required-message">
