--- a/src/app/user/my-bookings/my-bookings.html
+++ b/src/app/user/my-bookings/my-bookings.html
@@ -1,4 +1,4 @@
-<div class="my-bookings-page" [class.sort-menu-open]="isSortMenuOpen">
+<div class="my-bookings-page default-bg-color" [class.sort-menu-open]="isSortMenuOpen">
    <div class="container-fluid">
       <!-- Header dengan Sort Menu -->
       <div class="page-header">
