--- a/src/app/layout/header/header.html
+++ b/src/app/layout/header/header.html
@@ -1,4 +1,4 @@
-<div class="default-font default-bg-color h-header-page underline-header d-flex align-items-center">
+<div class="default-bg-color h-header-page underline-header d-flex align-items-center font">
    <div class="container-fluid p-0">
       <div class="row g-0">
          <!-- Logo Web / Judul -->
