changing header about

--- a/src/app/layout/footer/footer.html
+++ b/src/app/layout/footer/footer.html
@@ -1,4 +1,4 @@
-<div class="footer-container default-bg-color font">
+<div class="footer-container default-bg-color font" id="page-footer">
    <div
       class="g-0 row d-flex justify-content-center container-fluid bg-black max-vh text-white border-footer footer-gradient">
       <div class="d-flex justify-content-center align-items-center">
