adding FAQ and optimize Contact footer scroll

--- a/src/app/layout/footer/footer.html
+++ b/src/app/layout/footer/footer.html
@@ -12,7 +12,7 @@
          <!-- Information -->
          <div class="col-xl-3 col-sm-6 px-3 d-flex justify-content-center">
             <div class="w-75 h-100 pt-2">
-               <h5 class="mb-4 fw-bold">Contact Information</h5>
+               <h5 class="mb-4 fw-bold">Information</h5>
 
                <div class="mb-4 info-font">
                   <p class="fw-bold">Address</p>
